# RET_APP

./: .env  00_START_HERE.md  Backend.md  COMPLETION_REPORT.md  DELIVERY_SUMMARY.md  DELIVERY_SUMMARY.txt  FEATURES_DOCUMENTATION.md  FILE_INDEX.md  FINAL_CHECKLIST.md  FINAL_SUMMARY.md  FIX_RESOLUTION_REPORT.md  Frontend.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHANGES.md  MANUAL_TESTING_CHECKLIST.md  PLATFORM_SETUP.md  QUICK_REFERENCE.md  QUICK_START_ADVANCED_FEATURES.md  QUICK_START_FIXES.md  QUICK_START_TESTING.md  README.md  README_FIXES.md  README_TESTING.md  SETUP.md  TECHNICAL_ARCHITECTURE.md  TESTING_COMPLETE.md  TESTING_RESOURCES_INDEX.md  VISUAL_SUMMARY.txt  package-lock.json  setup.bat  test_all_features.py
.github/: copilot-instructions.md
RETV4/: AI PROMPT.txt  auth.py  db.py  launcher.py  models.py
backend/: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  integration_test.py  pyproject.toml  recreate_demo.py  start.py  test_argon2_direct.py  test_workflow.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_jobs_table.py  0003_add_is_active_column.py
backend/api/: main.py
backend/api/_deprecated/: __init__.py  ai_langchain_strategy.py  ai_lite.py  ai_router.py
backend/api/core/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py  prompts.py  prompts_visualization.py  rbac.py  security.py  session_cache.py
backend/api/integrations/: azure_openai.py  chroma_client.py
backend/api/middleware/: correlation_id.py  error_handler.py  logging_middleware.py  rate_limit.py  security_headers.py
backend/api/models/: __init__.py  job.py  models.py
backend/api/routers/: __init__.py  admin_router.py  advanced_router.py  ai_router.py  auth_router.py  comparison_router.py  conversion_router.py  files_router.py  job_router.py  rag_router.py  workflow_router.py
backend/api/routers/_deprecated/: ai_router.py
backend/api/schemas/: admin.py  advanced.py  ai.py  auth.py  common.py  comparison.py  conversion.py
backend/api/services/: admin_service.py  advanced_ai_service.py  ai_indexing_service.py  ai_service.py  auth_service.py  comparison_service.py  conversion_service.py  job_service.py  langchain_ai_service.py  lite_ai_service.py  parallel_converter.py  rag_service.py  session_service.py  storage_service.py  xlsx_conversion_service.py  xlsx_service.py  xml_processing_service.py  xml_service.py  zip_service.py
backend/api/services/ai/: __init__.py  advanced.py  advanced_rag_engine.py  auto_embedder.py  auto_indexer.py  backends.py  base.py  embedding_backend.py  factory.py  rag_engine.py  session_manager.py  vector_store.py  visualization_service.py
backend/api/utils/: auth_utils.py  csv_utils.py  diff_utils.py  file_utils.py  io_utils.py  vector_utils.py  xml_utils.py
backend/api/workers/: base_task.py  celery_app.py  comparison_worker.py  conversion_worker.py  embedding_worker.py  indexing_worker.py
backend/app/: main.py  models.py  xml_convert_parallel.py  xml_to_csv.py
backend/data/: ai_config.json
backend/outputs/1ef72163-99d6-4541-b986-0948db17bb85/extracted/xml_files/: 5.4.0-preprint-status-2__92f405bc32642f5c.xml  book_4.4.2__7920dbc383fa1677.xml
backend/outputs/4acdbeec-5b05-4d4e-8136-d9e97c96daef/extracted/xml_files/: 5.4.0-conf-bc-1__9da0823b53687b13.xml  5.4.0-confpaper-simcheck-1__0976827c8bac91c0.xml
backend/outputs/61d7bd0e-423c-422b-9042-431838822ffc/extracted/xml_files/: 5.4.0-posted_content-bc-1__6a9204794d48b564.xml
backend/outputs/910d762a-69b7-40b6-9c4f-6aabfecf9d3b/extracted/xml_files/: 5.4.0-article-bc-1__81388845a049c3e1.xml  5.4.0-article-version-1__7d73a8a4d80cd72d.xml  5.4.0-dissertation-bc-1__b36cde861f3dd8a3.xml  5.4.0-resource-simcheck-1__7b593ac5409aa1d9.xml  515151__4f423e1b0e3005e0.xml  component_4.4.2__0c6e08c1d7e4d80d.xml
backend/outputs/924a7be4-5ba9-4c5d-be31-c14c94f6c206/extracted/xml_files/: 5.4.0-book-bc-2__095fd2fd66f58958.xml
backend/outputs/b7bd5bbd-0339-44e7-b56c-aef29a9ba860/extracted/xml_files/: 5.4.0-article-archive-1__a13763e9840d8114.xml
backend/outputs/d39f279f-6ac2-4d33-b112-3b6d25670157/extracted/xml_files/: 5.4.0-resource-tc-1__121d223fff0712e6.xml  525252__0db379df0d2fb38b.xml
backend/outputs/efc252d2-f7aa-4f37-a88f-d83c8357cb04/extracted/xml_files/: 5.4.0-preprint-status-1__91d7c70cc937a095.xml  resource_license_fulltext_4.4.2__5595ea9927e8b82a.xml
backend/scripts/: add_is_deleted_column.py  cleanup_sessions.py  create_admin.py  demo_users.py  fix_role_case.py  init_db.py  migrate_all_columns.py  validate_advanced.py  validate_parallel_conversion.py
backend/tests/: test_admin.py  test_argon2.py  validate_system.py
backend/tests/e2e/: .test_token  RUN_TESTS.bat  test_advanced_features.py  test_advanced_features.sh  test_all_features.py  test_services.py
documents/: 00_START_HERE.md  Backend.md  (+39 more)
(+63 files in other folders)
