[project]
name = "backend"
version = "0.1.0"
description = "RET v4 - Backend API with Advanced RAG (LangGraph + ChromaDB + Azure OpenAI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "altair>=6.0.0",
    "argon2-cffi>=25.1.0",
    "cachetools>=5.3.0",
    "celery>=5.6.2",
    # ChromaDB for vector storage
    "chromadb>=0.4.0",
    "fastapi>=0.128.0",
    "gunicorn>=24.0.0",
    "jose>=1.0.0",
    # LangChain ecosystem for Advanced RAG
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.1.0",
    # LangGraph for workflow orchestration
    "langgraph>=0.2.0",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    # OpenAI for Azure OpenAI
    "openai>=1.40.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "rarfile>=4.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.7.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.8",
    "types-requests>=2.31.0",
    "types-python-jose>=3.3.4",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | alembic/versions
    | \.mypy_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # allow raise without from in except
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "alembic/",
    "tests/",
    "scripts/",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # Skip assert_used check

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
